# shapes-of-you

./: .env  .gitignore  App.css  App.tsx  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXTERNAL_REPOSITORIES.txt  EXTERNAL_REPOSITORIES_SHEX.txt  EXTRAS_GITHUB_REPOSITORIES.txt  EXTRAS_GITHUB_REPOSITORIES_2.txt  EXTRAS_SPARQL_ENDPOINTS.txt  FAILED_IMPORT_GITLAB_REPORT.md  FAILED_IMPORT_REPORT.md  LICENSE  LICENSE.txt  README.md  REPORT_GITEE.md  REPORT_GITHUB.md  REPORT_GITLAB.md  app.json  asset-manifest.json  deploy.sh  doap-project.ttl  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.virtuoso.yml  docker-compose.yml  endpoint.txt  get-active-endpoints.rq  get-files.rq  get-repositories.rq  get-shapes.rq  index.html  manifest.json  metadata-api.data.netwerkdigitaalerfgoed.nldatasetshackalodGVNservicesGVNsparql.ttl  metadata-api.druid.datalegend.netdatasetsivozandhuisivotemp-HISGISservicesendpointsparql.ttl  metadata-data.create.humanities.uva.nlsparql.ttl  (+210 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: indexing-improvement.md  interface-bug.md  interface-improvement.md
.github/workflows/: analyze-endpoints.yml  codeql-analysis.yml  deploy-github.yml  deploy-website.yml  docker-build.yml  get-shapes-github.yml  index-shapes.yml
api/: get-active-endpoints.rq  get-files.rq  get-global-hcls-metadata-construct.rq  get-global-hcls-metadata.rq  get-hcls-metadata-construct.rq  get-hcls-metadata.rq  get-repositories.rq  get-shapes.rq  search-shapes.rq  stats-shapes-types.rq
assets/: EXTRAS_GITHUB_REPOSITORIES.txt  EXTRAS_SPARQL_ENDPOINTS.txt  shapes-of-you-ontology.ttl
elastic-etl/: Dockerfile  database-sources.yaml  lsr_csv_to_elastic.py  requirements.txt
elastic-website/: Dockerfile  README.md  next.config.js  package.json
elastic-website/components/: Config.tsx  Footer.tsx  NavBar.tsx  index.tsx
elastic-website/components/searchkit/: Hits.tsx
elastic-website/hocs/: withApollo.tsx
elastic-website/pages/: _app.tsx  _document.tsx  about.tsx  apidocs.tsx  app.scss  index.tsx
elastic-website/pages/api/: graphql.tsx
elastic-website/pages/edit/: [id].tsx
elastic-website/pages/resource/: [id].tsx
etl/: Dockerfile  EXTRAS_GITHUB_REPOSITORIES_2.txt  EXTRAS_SPARQL_ENDPOINTS.txt  get_shapes_from_github.py  index_shapes.py  main.py  openapi.yml  pyproject.toml  requirements.txt  setup.py
etl/src/: config.py  fetch.py  load.py  models.py  parsers.py  process.py  utils.py
etl/src/indexers/: openapi_indexer.py  owl_indexer.py
etl/src/models/: index_concept.py  index_file.py  index_repo.py
get_github_data/: get_shapes_from_github.py  get_shapes_repos.py  requirements.txt
queries/: get-pathways-for-genes.rq
resources/: shapes-of-you-ontology.ttl
src/: About.tsx  Footer.tsx  NavBar.tsx  ShapeRegistry.tsx
src/components/: Config.tsx  Footer.tsx  NavBar.tsx  QueryYasguiButton.tsx  SparqlEndpointsDisplay.tsx
src/pages/: About.tsx  SemanticIndex.tsx  ShapeRegistry.tsx  SparqlEndpointsDisplay.tsx  SparqlEndpointsList.tsx  Yasgui.tsx
static/js/: 2.00c01370.chunk.js  2.07c78e2c.chunk.js  2.0e93e37e.chunk.js  2.0f1b93ff.chunk.js  2.10c6dec1.chunk.js  2.1163ea88.chunk.js  2.15e221cd.chunk.js  2.17c99858.chunk.js  2.1b7b17d4.chunk.js  2.1b7b17d4.chunk.js.LICENSE.txt  2.1e23f258.chunk.js  2.1ea22b52.chunk.js  2.23836d1a.chunk.js  2.2abe88d2.chunk.js  2.2abe88d2.chunk.js.LICENSE.txt  2.3287d897.chunk.js  2.4274a066.chunk.js  2.443ac39c.chunk.js  2.4d145aee.chunk.js  2.4fa9432d.chunk.js  2.4fa9432d.chunk.js.LICENSE.txt  2.56020d86.chunk.js  2.57b230c6.chunk.js  2.5960c947.chunk.js  2.666a49d6.chunk.js  2.677ea060.chunk.js  2.6d39472d.chunk.js  2.7128e02f.chunk.js  2.7a736d3e.chunk.js  2.7f9bbe20.chunk.js  2.8a0dacb6.chunk.js  2.90b49b61.chunk.js  2.90b49b61.chunk.js.LICENSE.txt  2.91a422fc.chunk.js  2.934e9770.chunk.js  2.9680c3df.chunk.js  2.9c7c8219.chunk.js  2.a0d8d132.chunk.js  2.a0d8d132.chunk.js.LICENSE.txt  2.a0d8d132.chunk.js.map  (+300 more)
web-gatsby/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  README.md  gatsby-config.js  package.json  tsconfig.json
web-gatsby/.github/workflows/: deploy.yml
web-gatsby/src/: content.tsx
web-gatsby/src/components/: CodeChip.tsx  Config.tsx  Footer.tsx  LinkOut.tsx  MyMarkdown.tsx  NavBar.tsx  ProfileButton.tsx  QueryYasguiButton.tsx  StyledComponents.tsx
web-gatsby/src/components/layout/: footer.tsx  layout.tsx  navbar.tsx  old-navbar.tsx  seo.tsx
web-gatsby/src/hooks/: useSiteMetadata.ts
web-gatsby/src/pages/: 404.tsx  About.tsx  SparqlEndpointsList.tsx  Yasgui.tsx  index.tsx  old-index.tsx
web-gatsby/src/utils/: global.css  theme.ts  types.ts
web-gatsby/static/: Vincent_Emonet.vcf  rdf_cv_vincent_emonet.json
web-qwik/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web-qwik/src/: global.css
web-qwik/src/routes/: hackernews.tsx  index.tsx
website/: App.css  App.tsx  app.json  package.json  tsconfig.json
website/src/components/: Config.tsx  Footer.tsx  NavBar.tsx  QueryYasguiButton.tsx
website/src/pages/: About.tsx  SemanticIndex.tsx  SparqlEndpointsList.tsx  Yasgui.tsx
