[project]
version = "0.1.0"
name = "shapes-of-you-etl"
description = "ETL to extract structured and semantic files from various repositories (git, LOD...)."
requires-python = ">=3.7"
authors = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Nanopublication",
    "RDF",
    "Linked Data",
    "Publishing"
]

dependencies = [
    "requests",
    "pydantic",
    "python-graphql-client ==0.3.0",
    "python-gitlab",
    "rdflib >=6.1.1",
    "SPARQLWrapper >=1.8.5",
    "PyYAML",
    # prance[osv,icu,cli]
    "prance",
    "obonet",
    "PyShExC",
    # d2s-cli@git+https://github.com/MaastrichtU-IDS/d2s-cli.git@master
    # git+https://github.com/MaastrichtU-IDS/d2s-cli.git@develop
    # d2s
]

# [project.scripts]
# soy = "main:cli"

[project.optional-dependencies]
test = [
    "pytest-cov >=2.12.0,<4.0.0",
    "mypy ==0.971",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<6.0.0",
    "Flake8-pyproject>=1.1.0.post0",
    "flaky",
]
dev = [
    "pre-commit >=2.17.0,<3.0.0",
    "autoflake >=1.4.0,<2.0.0",
    "types-requests",
]


[project.urls]
Source = "https://github.com/vemonet/shapes-of-you"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "dev",
]
# post-install-commands = [
#   "pre-commit install",
# ]

[tool.hatch.envs.default.scripts]
scan = "python main.py {args}"


# TOOLS
[tool.isort]
line_length = 120
skip = ["nanopub/__init__.py"]
profile = "black"


[tool.flake8]
max-complexity = 17
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
]
ignore = [
    "E501", # line too long
    "E303", # too many blank lines
    "E301", # expected 1 blank lines found 0
    "W503", # line break before binary operator
]


[tool.mypy]
strict = false
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true


# [tool.pytest.ini_options]
# markers = [
#     "no_rsa_key: mark a test as a test only run when there is no nanopub RSA key setup.",
# ]

# [tool.black]
# color = true
# line-length = 120
# target-version = ['py310']
# skip-string-normalization = true
