[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.1.0"
name = "shapes-of-you-etl"
description = "ETL to extract structured and semantic files from various repositories (git, LOD...)."
requires-python = ">=3.8"
authors = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "SHACL",
    "ShEx",
    "OWL ontology",
    "RDF",
    "Linked Data",
    "Indexing",
]

dependencies = [
    "requests",
    "pydantic",
    "python-graphql-client ==0.3.0",
    "python-gitlab",
    "rdflib >=6.1.1",
    "SPARQLWrapper >=1.8.5",
    "PyYAML",
    # prance[osv,icu,cli]
    "prance",
    "obonet",
    "PyShExC",
    # d2s-cli@git+https://github.com/MaastrichtU-IDS/d2s-cli.git@master
    # git+https://github.com/MaastrichtU-IDS/d2s-cli.git@develop
    # d2s
]

# [project.scripts]
# soy = "main:cli"

[project.optional-dependencies]
test = [
    "pytest-cov >=2.12.0,<4.0.0",
    "mypy ==0.971",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<6.0.0",
    "Flake8-pyproject >=1.1.0.post0",
    "flaky",
]
dev = [
    "pre-commit >=2.17.0,<3.0.0",
    "autoflake >=1.4.0,<2.0.0",
    "types-requests",
]


[project.urls]
Homepage = "https://github.com/vemonet/shapes-of-you"
Documentation = "https://github.com/vemonet/shapes-of-you"
History = "https://github.com/vemonet/shapes-of-you/releases"
Tracker = "https://github.com/vemonet/shapes-of-you/issues"
Source = "https://github.com/vemonet/shapes-of-you"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "dev",
]
# post-install-commands = [
#   "pre-commit install",
# ]

# hatch run scan github vemonet/shapes-of-you
[tool.hatch.envs.default.scripts]
index = "python main.py {args}"
test = "pytest {args}"
cov = "test --cov src {args}"
fmt = [
    "ruff src tests example --fix",
]
check = [
    "ruff src tests",
    "mypy src",
]


# TOOLS

[tool.mypy]
strict = false
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = [ "src" ]
target-version = "py38"
line-length = 120
select = [
    "A",
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    # "FBT", # flake8-boolean-trap
    "I",  # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]

ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
